@@ -6,12 +6,6 @@ plugins {
     id 'info.solidsoft.pitest' version '1.9.0'
 
     id 'org.openjfx.javafxplugin' version '0.0.13'
-    
-    // id 'application'
-    // id 'java-library'
-
-    // id 'org.javamodularity.moduleplugin' version '1.8.12'
-    // id 'org.beryx.jlink' version '2.25.0'
 }
 
 group 'edu.rose-hulman.csse'
@@ -20,10 +14,6 @@ version '1.0'
 repositories {
     mavenCentral()
 }
-
-// apply plugin: 'java'
-// sourceCompatibility = '17'
-// targetCompatibility = '17'
 
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
@@ -119,51 +109,13 @@ jacocoTestReport.finalizedBy(codeCoverageInfo)
 //
 // --------------------------------------------------------------------------------
 
-
-// application.mainClass = 'gui.Catan'
-// application.mainModule = 'gui'
-
 javafx {
     version "11" // changed from 20 to 11
     modules = ['javafx.base', 'javafx.graphics', 'javafx.controls', 'javafx.fxml']
 }
 
-
-// this breaks pitest
-
-// java {
-//     toolchain {
-//         languageVersion = JavaLanguageVersion.of(17)
-//     }
-// }
-
-
-
-// end stuff that breaks pitest
-
-// jlink {
-//     imageZip = project.file("${buildDir}/distributions/app-${javafx.platform.classifier}.zip")
-//     options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
-//     launcher {
-//         name = 'app'
-//     }
-// }
-
-// jlinkZip {
-//     group = 'distribution'
-// }
-
-// run {
-//     doFirst {
-//         jvmArgs = [
-//                 '--module-path', classpath.asPath,
-//                 '--add-modules', 'javafx.controls', 'javafx.fxml'
-//         ]
-//     }
-// }
-
 compileJava {
-    options.release = 11 // changed from 17 to 11
+    options.release = 17
     doFirst {
         options.compilerArgs = [
                 '--module-path', classpath.asPath,
@@ -171,7 +123,3 @@ compileJava {
         ]
     }
 }
-
-// tasks.withType(JavaCompile) {
-//     options.release = 17
-// }
